<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <Button
        android:id="@+id/number1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/round_button"
        android:padding="15dp"
        android:text="@string/number1"
        android:textColor="@drawable/yourselector"
        android:textSize="45sp"
        android:onClick="Dial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></Button>

    <Button
        android:id="@+id/number3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_button"
        android:padding="15dp"
        android:text="@string/number4"
        android:textColor="@drawable/yourselector"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number1"></Button>

    <Button
        android:id="@+id/number6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_button"
        android:padding="15dp"
        android:text="@string/number7"
        android:textColor="@drawable/yourselector"
        android:textSize="45sp"
        android:onClick="Dial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number3"></Button>

    <Button
        android:id="@+id/number9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_button"
        android:padding="15dp"
        android:text="@string/asterisco"
        android:textColor="@drawable/yourselector"
        android:textSize="45sp"
        android:onClick="Dial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number6"></Button>

    <Button
        android:id="@+id/number7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_button"
        android:padding="15dp"
        android:text="@string/number8"
        android:textColor="@drawable/yourselector"
        android:textSize="45sp"
        android:onClick="Dial"
        app:layout_constraintEnd_toStartOf="@+id/number8"
        app:layout_constraintStart_toEndOf="@+id/number6"
        app:layout_constraintTop_toBottomOf="@+id/number4"></Button>

    <Button
        android:id="@+id/number10"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_button"
        android:padding="15dp"
        android:text="@string/number0"
        android:textColor="@drawable/yourselector"
        android:textSize="45sp"
        android:onClick="Dial"
        app:layout_constraintEnd_toStartOf="@+id/number8"
        app:layout_constraintStart_toEndOf="@+id/number9"
        app:layout_constraintTop_toBottomOf="@+id/number7"></Button>

    <Button
        android:id="@+id/number4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_button"
        android:padding="15dp"
        android:text="@string/number5"
        android:textColor="@drawable/yourselector"
        android:textSize="45sp"
        android:onClick="Dial"
        app:layout_constraintEnd_toStartOf="@+id/number5"
        app:layout_constraintStart_toEndOf="@+id/number3"
        app:layout_constraintTop_toBottomOf="@+id/number"></Button>

    <Button
        android:id="@+id/number5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/round_button"
        android:padding="15dp"
        android:text="@string/number6"
        android:textColor="@drawable/yourselector"
        android:textSize="45sp"
        android:onClick="Dial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number2"></Button>

    <Button
        android:id="@+id/number8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/round_button"
        android:padding="15dp"
        android:text="@string/hashtag"
        android:textColor="@drawable/yourselector"
        android:textSize="45sp"
        android:onClick="Dial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number11"></Button>

    <Button
        android:id="@+id/number11"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/round_button"
        android:padding="15dp"
        android:text="@string/number9"
        android:textColor="@drawable/yourselector"
        android:textSize="45sp"
        android:onClick="Dial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number5"></Button>

    <Button
        android:id="@+id/number"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/round_button"
        android:padding="15dp"
        android:text="@string/number2"
        android:textColor="@drawable/yourselector"
        android:textSize="45sp"
        android:onClick="Dial"
        app:layout_constraintEnd_toStartOf="@+id/number2"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/number1"
        app:layout_constraintTop_toTopOf="parent"></Button>

    <Button
        android:id="@+id/number2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/round_button"
        android:padding="15dp"
        android:text="@string/number3"
        android:textColor="@drawable/yourselector"
        android:textSize="45sp"
        android:onClick="Dial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></Button>

    <ImageButton
        android:id="@+id/dial"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/dial_button"
        android:textSize="45sp"
        android:onClick="startCall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number10"
        app:srcCompat="@android:drawable/stat_sys_phone_call" />

    <EditText
        android:id="@+id/numberToDial"
        android:layout_width="227dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/DialerWritten"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>